[package]
name = "pcd8544"
version = "0.2.0"
authors = ["Michael Watzko <michael@watzko.de>"]
repository = "https://github.com/kellerkindt/pcd8544.git"
description = "Implementation to communicate and write to PCD8544 using embedded_hal as abstraction layer. WIP"
keywords = ["embedded", "display", "lcd", "pcd8544", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"
