[package]
name = "bluepill-pcd8544-example"
edition = "2018"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"

# Extra stuff. Bluepills need nb crate?
# And bitbang hal for SPI emulation
nb = "0.1.2"
bitbang-hal = "0.3.2"

[dependencies.pcd8544]
path = "../.."
features = ["textmode"]

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
